// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`abis wasm bindings computes a contract address 1`] = `
AztecAddress {
  "buffer": {
    "data": [
      17,
      160,
      201,
      96,
      127,
      185,
      91,
      146,
      4,
      147,
      169,
      211,
      33,
      226,
      156,
      174,
      240,
      174,
      157,
      149,
      81,
      249,
      149,
      226,
      160,
      18,
      239,
      108,
      218,
      140,
      217,
      137,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis wasm bindings computes a function leaf 1`] = `
Fr {
  "value": 3087577661303601311028613516544548769914327454147174509447606645757193921240n,
}
`;

exports[`abis wasm bindings computes a function selector 1`] = `
{
  "data": [
    169,
    5,
    156,
    187,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings computes commitment nonce 1`] = `
Fr {
  "value": 13496027098354931963552650893736311555066207973436318315473061104559483240114n,
}
`;

exports[`abis wasm bindings computes contract leaf 1`] = `
Fr {
  "value": 14753252017424563237038015065402454919037294146339173328174383872613705551896n,
}
`;

exports[`abis wasm bindings computes function tree root 1`] = `
Fr {
  "value": 10347099364184817470749359182712341488544005132594679915946302065868679911885n,
}
`;

exports[`abis wasm bindings computes siloed commitment 1`] = `
Fr {
  "value": 16534789767920606571541683139317465939081284769910575930923078591683356873433n,
}
`;

exports[`abis wasm bindings computes siloed nullifier 1`] = `
Fr {
  "value": 4957445512951137590281746823314455197982530036508465893793736233926551006579n,
}
`;

exports[`abis wasm bindings computes unique commitment 1`] = `
Fr {
  "value": 4300635537850003871451650912699252898033249035618622792407744400807361159458n,
}
`;

exports[`abis wasm bindings hashes a tx request 1`] = `
{
  "data": [
<<<<<<< HEAD
    12,
    232,
    162,
    197,
    24,
    169,
    220,
    190,
    249,
    181,
    143,
    125,
    42,
    148,
    122,
    184,
    9,
    76,
    249,
    203,
    86,
    123,
    134,
    233,
    199,
    172,
    142,
    3,
    153,
    58,
    146,
    26,
=======
    5,
    241,
    128,
    231,
    156,
    56,
    191,
    226,
    163,
    155,
    242,
    179,
    2,
    117,
    133,
    242,
    96,
    103,
    120,
    134,
    97,
    12,
    123,
    20,
    74,
    129,
    127,
    232,
    237,
    137,
    239,
    105,
>>>>>>> feat: include is_internal in kernels
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes constructor info 1`] = `
Fr {
  "value": 4351390993285100160747743596370979118754226254480102179791621315609967238359n,
}
`;

exports[`abis wasm bindings hashes empty function args 1`] = `
Fr {
  "value": 0n,
}
`;

exports[`abis wasm bindings hashes function args 1`] = `
Fr {
  "value": 18906676604864959005173276375312600640969342814693694325262988108261136820631n,
}
`;

exports[`abis wasm bindings hashes many function args 1`] = `
Fr {
  "value": 16458590480032755384470108712609389694120470087885514794475677859856835664159n,
}
`;
